# thep

./: CMakeLists.txt  README.md
include/thep/: thep_ns.h
include/thep/core/: job.h  resumable.h  worker_id.h
include/thep/core/work_strealing/: work_stealing_pool.h  work_stealing_worker.h
include/thep/job_queue/: simple_list.h  simple_list_element.h  thread_safe_simple_list.h
include/thep/util/: spinlock.h
src/core/job_queue/: simple_list.cpp
src/core/work_stealing/: work_stealing_worker.cpp  work_strealing_pool.cpp
